перезагрузка списков на ходу, если актуально.